--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 streamlit
 ultralytics
-opencv-python-headless
+opencv-python-headless==4.7.0.72
 Pillow
 numpy
 torch
 torchvision
 matplotlib
+
 
